add bio without styles

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+
+        <div class="main">
+            <div class="left-panel">
+                <div id="bio">
+
+                </div>
+            </div>
+
+            <div class="right-panel">
+
+            </div>
+        </div>
 
         <script src="./src/index.js"></script>
     </body>
