--- a/index.html
+++ b/index.html
@@ -4,21 +4,54 @@
         <meta charset="UTF-8">
         <title>PaintHub</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+        <script src="https:///code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     </head>
     <body>
-
-        <div class="main">
-            <div class="left-panel">
-                <div id="bio">
-
+        <div id="tabs">
+            <ul>
+                <li><a href="#home"><span>Home</span></a></li>
+                <li><a href="#update-info"><span>Update Info</span></a></li>
+                <li><a href="#add-painting"><span>Add Painting</span></a></li>
+            </ul>
+            <div id="home">
+                <div class="main">
+                    <div class="left-panel">
+                        <div id="bio">
+                        </div>
+        
+                        <div id="video">
+                            <video class="video" controls>
+                                <source src="./public/video.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+        
+                    <div class="right-panel">
+                    </div>
                 </div>
             </div>
 
-            <div class="right-panel">
-
+            <div id="update-info">
+                <form id="painter-form" onsubmit="editPainterBio()">
+                    <textarea id="form-bio" rows="4" cols="50" name="bio" form="painter-form">Enter bio here...</textarea>
+                    <br>
+                    <input id="form-contact" type="text" size="35" name="contact" placeholder="email">
+                    <br>
+                    <input type="hidden" id="form-id" value="">
+                    <input type="submit" value="Submit">
+                </form> 
             </div>
-        </div>
+
+            <div id="add-painting">
+                La Calombe Rocks
+            </div>
+         </div>
 
         <script src="./src/index.js"></script>
+        <script>
+            $( "#tabs" ).tabs();
+        </script>
     </body>
 </html>
