add delete painting feature

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <input id="form-contact" type="text" size="35" name="contact" placeholder="email">
                     <br>
                     <input type="hidden" id="form-id" value="">
-                    <input type="submit" value="Submit">
+                    <input class="sub-btn" type="submit" value="Submit">
                 </form> 
             </div>
 
